@@ -27,6 +27,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #17923: glob() patterns ending with a slash no longer match non-dirs on
+  AIX.  Based on patch by Delhallt.
+
 - Issue #21121: Don't force 3rd party C extensions to be built with
   -Werror=declaration-after-statement.
 
